hw04/k8s/03-postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hw04-postgresql
  labels:
    app.kubernetes.io/name: hw04
    app.kubernetes.io/instance: hw04
spec:
  serviceName: hw04-postgresql
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: postgres
      app.kubernetes.io/instance: hw04
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postgres
        app.kubernetes.io/instance: hw04
    spec:
      containers:
        - name: postgres
          image: "postgres:16-alpine"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: postgres
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
            - name: postgres-initdb
              mountPath: /docker-entrypoint-initdb.d/init.sql
              subPath: init.sql
      volumes:
        - name: postgres-initdb
          configMap:
            name: hw04-postgres-config
            items:
              - key: init.sql
                path: init.sql
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
