hw04/k8s/06-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw04
  labels:
    app.kubernetes.io/name: hw04
    app.kubernetes.io/instance: hw04
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: hw04
      app.kubernetes.io/instance: hw04
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hw04
        app.kubernetes.io/instance: hw04
    spec:
      containers:
        - name: hw04
          image: "akinxela/otusapp:hw04"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8000
            failureThreshold: 30
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          resources: {}
