hw04/k8s/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw04
  labels:
    app.kubernetes.io/name: hw04
    app.kubernetes.io/instance: hw04
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hw04
                port:
                  number: 80
